--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,14 @@
-import io.github.robwin.swagger2markup.GroupBy
-
 buildscript {
     repositories {
         jcenter()
         mavenCentral()
         maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }
-        mavenLocal()
+        //mavenLocal()
     }
     dependencies {
         classpath 'org.asciidoctor:asciidoctor-gradle-plugin:1.5.3'
         classpath 'org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.10.1'
-        classpath 'io.github.robwin:swagger2markup-gradle-plugin:0.9.2'
+        classpath 'io.github.swagger2markup:swagger2markup-gradle-plugin:1.0.0-SNAPSHOT'
         classpath "com.bluepapa32:gradle-watch-plugin:0.1.5"
         classpath "org.kordamp.gradle:livereload-gradle-plugin:0.2.1"
     }
@@ -19,7 +17,7 @@ buildscript {
 apply plugin: 'org.asciidoctor.convert'
 apply plugin: 'com.bluepapa32.watch'
 apply plugin: 'org.kordamp.gradle.livereload'
-apply plugin: 'io.github.robwin.swagger2markup'
+apply plugin: 'io.github.swagger2markup'
 
 group 'io.github.swagger2markup'
 version '1.0.0-SNAPSHOT'
@@ -34,7 +32,10 @@ ext {
 }
 
 convertSwagger2markup {
-    pathsGroupedBy GroupBy.TAGS
+    swaggerInput file("src/docs/swagger/swagger_petstore.yaml").getAbsolutePath()
+    outputDir asciiDocOutputDir
+    config = ['swagger2markup.markupLanguage' : 'ASCIIDOC',
+              'swagger2markup.pathsGroupedBy' : 'TAGS']
 }
 
 asciidoctor {
@@ -53,8 +54,8 @@ asciidoctor {
             hardbreaks: '',
             generated: asciiDocOutputDir
     ]
-}
 
+}
 
 watch {
     asciidoc {
