--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath 'org.asciidoctor:asciidoctor-gradle-plugin:1.5.3'
         classpath 'org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.10.1'
         classpath 'io.github.swagger2markup:swagger2markup-gradle-plugin:1.0.0-SNAPSHOT'
+        classpath "io.github.swagger2markup:swagger2markup-import-files-ext:1.0.0-SNAPSHOT"
         classpath "com.bluepapa32:gradle-watch-plugin:0.1.5"
         classpath "org.kordamp.gradle:livereload-gradle-plugin:0.2.1"
     }
@@ -35,7 +36,11 @@ convertSwagger2markup {
     swaggerInput file("src/docs/swagger/swagger_petstore.yaml").getAbsolutePath()
     outputDir asciiDocOutputDir
     config = ['swagger2markup.markupLanguage' : 'ASCIIDOC',
-              'swagger2markup.pathsGroupedBy' : 'TAGS']
+              'swagger2markup.pathsGroupedBy' : 'TAGS',
+              'swagger2markup.extensions.dynamicDefinitions.contentPath' : file('src/docs/asciidoc/extensions/definitions').absolutePath,
+              'swagger2markup.extensions.dynamicOverview.contentPath' : file('src/docs/extensions/overview').absolutePath,
+              'swagger2markup.extensions.dynamicPaths.contentPath' : file('src/docs/asciidoc/extensions/paths').absolutePath,
+              'swagger2markup.extensions.dynamicSecurity.contentPath' : file('src/docs/asciidoc/extensions/security').absolutePath]
 }
 
 asciidoctor {
