--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         classpath 'org.asciidoctor:asciidoctor-gradle-plugin:1.5.3'
         classpath 'org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.10.1'
         classpath 'io.github.swagger2markup:swagger2markup-gradle-plugin:1.1.0'
-        //classpath "io.github.swagger2markup:swagger2markup:1.1.0"
+        classpath "io.github.swagger2markup:swagger2markup:1.1.1"
         classpath "io.github.swagger2markup:swagger2markup-import-files-ext:1.0.0"
         classpath "com.bluepapa32:gradle-watch-plugin:0.1.5"
         classpath "org.kordamp.gradle:livereload-gradle-plugin:0.2.1"
