--- a/src/docs/swagger/admin.yaml
+++ b/src/docs/swagger/admin.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   title: Admin REST API
-  version: '6.5'
+  version: '6.0'
   description: |
     The Admin REST API is a secondary API provided by the Query service.
     This API enables you to retrieve statistics about the clusters and nodes running the Query service; view or specify service-level settings; and view or delete requests.
@@ -674,21 +674,6 @@ definitions:
       at_plus.count:
         type: number
         description: Total number of N1QL requests with `at_plus` index consistency.
-      audit_actions.count:
-        type: number
-        description: |
-          The total number of audit records sent to the server.
-          Some requests cause more than one audit record to be emitted.
-          Records in the output queue that have not yet been sent to the server are not counted.
-      audit_actions_failed.count:
-        type: number
-        description: The total number of audit records sent to the server that failed.
-      audit_requests_filtered.count:
-        type: number
-        description: The number of potentially auditable requests that cause no audit action to be taken.
-      audit_requests_total.count:
-        type: number
-        description: The total number of potentially auditable requests sent to the query engine.
       cancelled.count:
         type: number
         description: Total number of cancelled requests.
@@ -698,9 +683,6 @@ definitions:
       errors.count:
         type: number
         description: The total number of N1QL errors returned so far.
-      index_scans.count:
-        type: number
-        description: Total number of secondary index scans.
       inserts.count:
         type: number
         description: Total number of INSERT operations.
@@ -710,15 +692,55 @@ definitions:
       mutations.count:
         type: number
         description: Total number of document mutations.
+      prepared.15m.rate:
+        type: number
+        description: |
+          Prepared statements executed per second.
+          15-minute exponentially weighted moving average.
+      prepared.1m.rate:
+        type: number
+        description: |
+          Prepared statements executed per second.
+          1-minute exponentially weighted moving average.
+      prepared.5m.rate:
+        type: number
+        description: |
+          Prepared statements executed per second.
+          5-minute exponentially weighted moving average.
       prepared.count:
         type: number
         description: Total number of prepared statements executed.
-      primary_scans.count:
+      prepared.mean.rate:
         type: number
-        description: Total number of primary index scans.
+        description: |
+          Prepared statements executed per second.
+          Mean rate since the query service started.
       queued_requests.count:
         type: number
         description: Total number of queued requests.
+      request_rate.15m.rate:
+        type: number
+        description: |
+          Number of N1QL requests processed per second.
+          15-minute exponentially weighted moving average.
+      request_rate.1m.rate:
+        type: number
+        description: |
+          Number of N1QL requests processed per second.
+          1-minute exponentially weighted moving average.
+      request_rate.5m.rate:
+        type: number
+        description: |
+          Number of N1QL requests processed per second.
+          5-minute exponentially weighted moving average.
+      request_rate.count:
+        type: number
+        description: Total number of N1QL requests.
+      request_rate.mean.rate:
+        type: number
+        description: |
+          Number of N1QL requests processed per second.
+          Mean rate since the query service started.
       request_time.count:
         type: number
         format: ns
@@ -995,20 +1017,15 @@ parameters:
     enum:
       - active_requests
       - at_plus
-      - audit_actions
-      - audit_actions_failed
-      - audit_requests_filtered
-      - audit_requests_total
       - cancelled
       - deletes
       - errors
-      - index_scans
       - inserts
       - invalid_requests
       - mutations
       - prepared
-      - primary_scans
       - queued_requests
+      - request_rate
       - request_time
       - request_timer
       - requests
