DOC-5059: New /admin/settings endpoint fields

--- a/src/docs/swagger/admin.yaml
+++ b/src/docs/swagger/admin.yaml
@@ -301,7 +301,6 @@ paths:
             type: array
             items:
               type: string
-              format: uuid
               description: Unique request ID internally generated for the query.
 
   /admin/indexes/completed_requests:
@@ -322,7 +321,6 @@ paths:
             type: array
             items:
               type: string
-              format: uuid
               description: Unique request ID internally generated for the query.
 
   /admin/ping:
@@ -492,8 +490,9 @@ definitions:
     properties:
       clientContextID:
         type: string
-        format: uuid
-        description: The opaque ID or context provided by the client.
+        description: |
+          The opaque ID or context provided by the client.
+          Refer to xref:settings:query-settings.adoc#client_context_id[client_context_id] for more details.
       elapsedTime:
         type: string
         description: |
@@ -517,11 +516,9 @@ definitions:
         description: IP address and port number of the client application, from where the query is received.
       requestId:
         type: string
-        format: uuid
         description: Unique request ID internally generated for the query.
       requestTime:
         type: string
-        format: date-time
         description: Timestamp when the query is received.
       resultCount:
         type: number
@@ -534,7 +531,6 @@ definitions:
         description: The value of the query setting Scan Consistency used for the query.
       serviceTime:
         type: string
-        format: duration
         description: Total amount of calendar time taken to complete the query.
       state:
         type: string
@@ -721,7 +717,6 @@ definitions:
         description: Total number of queued requests.
       request_time.count:
         type: number
-        format: ns
         description: Total end-to-end time to process all queries.
       request_timer.15m.rate:
         type: number
@@ -740,25 +735,21 @@ definitions:
           5-minute exponentially weighted moving average.
       request_timer.75%:
         type: number
-        format: ns
         description: |
           End-to-end time to process a query.
           The 75th percentile.
       request_timer.95%:
         type: number
-        format: ns
         description: |
           End-to-end time to process a query.
           The 95th percentile.
       request_timer.99%:
         type: number
-        format: ns
         description: |
           End-to-end time to process a query.
           The 99th percentile.
       request_timer.99.9%:
         type: number
-        format: ns
         description: |
           End-to-end time to process a query.
           The 99.9th percentile.
@@ -767,13 +758,11 @@ definitions:
         description: Total number of N1QL requests.
       request_timer.max:
         type: number
-        format: ns
         description: |
           End-to-end time to process a query.
           The maximum value.
       request_timer.mean:
         type: number
-        format: ns
         description: |
           End-to-end time to process a query.
           The mean value.
@@ -784,19 +773,16 @@ definitions:
           Mean rate since the query service started.
       request_timer.median:
         type: number
-        format: ns
         description: |
           End-to-end time to process a query.
           The median value.
       request_timer.min:
         type: number
-        format: ns
         description: |
           End-to-end time to process a query.
           The minimum value.
       request_timer.stddev:
         type: number
-        format: ns
         description: |
           End-to-end time to process a query.
           The standard deviation.
@@ -820,7 +806,6 @@ definitions:
         description: Total number of results (documents) returned by the query engine.
       result_size.count:
         type: number
-        format: bytes
         description: Total size of data returned by the query engine.
       scan_plus.count:
         type: number
@@ -830,7 +815,6 @@ definitions:
         description: Total number of SELECT requests.
       service_time.count:
         type: number
-        format: ns
         description: Time to execute all queries.
       unbounded.count:
         type: number
@@ -893,18 +877,67 @@ definitions:
     type: object
     title: Settings
     properties:
+      auto-prepare:
+        type: boolean
+        default: false
+        description: |
+          Specifies whether the query engine should create a prepared statement every time a N1QL request is submitted, whether the PREPARE statement is included or not.
+          Refer to xref:n1ql-language-reference/prepare.adoc#auto-prepare[Auto-Prepare] for more information.
+      completed:
+        type: object
+        title: Completed requests logging parameters
+        description: |
+          A nested object that sets the parameters for the completed requests catalog.
+          All completed requests that match these parameters are tracked in the completed requests catalog.
+          Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-req[Configuring the Completed Requests] for more information and examples.
+        properties:
+          aborted:
+            type: boolean
+            description: If true, all requests that generate a panic are logged.
+          client:
+            type: string
+            description: |
+              The IP address of the client.
+              If specified, all completed requests from this IP address are logged.
+          context:
+            type: string
+            description: |
+              The opaque ID or context provided by the client.
+              If specified, all completed requests with this client context ID are logged.
+              Refer to xref:settings:query-settings.adoc#client_context_id[client_context_id] for more information.
+          error:
+            type: number
+            description: |
+              An error number.
+              If specified, all completed queries returning this error number are logged.
+          tag:
+            type: string
+            description: A unique string which tags a set of qualifiers.
+          threshold:
+            type: number
+            format: ms
+            description: |
+              A duration.
+              If specified, all completed queries lasting longer than this threshold are logged.
+              This is another way of specifying the `completed-threshold` setting, as described in <<_settings>>.
+          user: 
+            type: string
+            description: |
+              A user name, as given in the request credentials.
+              If specified, all completed queries with this user name are logged.
       completed-limit:
         type: integer
         default: 4000
         description: |
-          Maximum number of completed requests.
+          Sets the number of requests to be logged in the completed requests catalog.
           As new completed requests are added, old ones are removed.
           Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-req[Configuring the Completed Requests] for more information and examples.
       completed-threshold:
         type: integer
         default: 1000
+        format: ms
         description: |
-          Cache completed query lasting longer than this many milliseconds.
+          All completed queries lasting longer than this threshold are logged in the completed requests catalog.
           Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-req[Configuring the Completed Requests] for more information and examples.
       controls:
         type: boolean
@@ -918,6 +951,12 @@ definitions:
         type: boolean
         default: false
         description: Use debug mode.
+      distribute:
+        type: boolean
+        description: |
+          This field is only available with the POST method.
+          When specified alongside other settings, this field instructs the node that is processing the request to cascade those settings to all other query nodes.
+          The actual value of this field is ignored.
       keep-alive-length:
         type: integer
         default: 16384
@@ -929,7 +968,9 @@ definitions:
         description: Log level used in the logger.
       max-index-api:
         type: number
-        description: Max index API.
+        description: |
+          Max index API.
+          This setting is provided for technical support only.
       max-parallelism:
         type: integer
         default: 1
@@ -940,9 +981,17 @@ definitions:
         type: string
         default: ""
         description: Filename to write the diagnostic memory usage log.
+      mutexprofile:
+        type: boolean
+        default: false
+        description: |
+          Mutex profile.
+          This setting is provided for technical support only.
       n1ql-feat-ctrl:
         type: number
-        description: N1QL feature control.
+        description: |
+          N1QL feature control.
+          This setting is provided for technical support only.
       pipeline-batch:
         type: integer
         default: 16
@@ -982,7 +1031,6 @@ definitions:
         description: The number of service threads for the query.
       timeout:
         type: string
-        format: duration
         default: 0s
         description: Maximum time to spend on the request before timing out.
 
