--- a/src/docs/swagger/admin.yaml
+++ b/src/docs/swagger/admin.yaml
@@ -881,12 +881,13 @@ definitions:
         type: boolean
         default: false
         description: |
+          [[auto-prepare]]Specifies whether the query engine should create a prepared statement every time a N1QL request is submitted, whether the PREPARE statement is included or not.
           Refer to xref:n1ql:n1ql-language-reference/prepare.adoc#auto-prepare[Auto-Prepare] for more information.
       completed:
         type: object
         title: Completed requests logging parameters
         description: |
-          A nested object that sets the parameters for the completed requests catalog.
+          [[completed]]A nested object that sets the parameters for the completed requests catalog.
           All completed requests that match these parameters are tracked in the completed requests catalog.
           Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-req[Configuring the Completed Requests] for more information and examples.
         properties:
@@ -928,7 +929,7 @@ definitions:
         type: integer
         default: 4000
         description: |
-          Sets the number of requests to be logged in the completed requests catalog.
+          [[completed-limit]]Sets the number of requests to be logged in the completed requests catalog.
           As new completed requests are added, old ones are removed.
           Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-req[Configuring the Completed Requests] for more information and examples.
       completed-threshold:
@@ -936,101 +937,115 @@ definitions:
         default: 1000
         format: ms
         description: |
-          All completed queries lasting longer than this threshold are logged in the completed requests catalog.
+          [[completed-threshold]]All completed queries lasting longer than this threshold are logged in the completed requests catalog.
           Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-req[Configuring the Completed Requests] for more information and examples.
       controls:
         type: boolean
         default: false
-        description: Specifies if there should be a controls section returned with the request results.
+        description: |
+          [[controls-srv]]Specifies if there should be a controls section returned with the request results.
       cpuprofile:
         type: string
         default: ""
-        description: The absolute path and filename to write the CPU profile to a local file.
+        description: |
+          [[cpuprofile]]The absolute path and filename to write the CPU profile to a local file.
       debug:
         type: boolean
         default: false
-        description: Use debug mode.
+        description: |
+          [[debug]]Use debug mode.
       distribute:
         type: boolean
         description: |
-          This field is only available with the POST method.
+          [[distribute]]This field is only available with the POST method.
           When specified alongside other settings, this field instructs the node that is processing the request to cascade those settings to all other query nodes.
           The actual value of this field is ignored.
       keep-alive-length:
         type: integer
         default: 16384
-        description: Maximum size of buffered result.
+        description: |
+          [[keep-alive-length]]Maximum size of buffered result.
       loglevel:
         type: string
         default: INFO
         enum: ["DEBUG","TRACE","INFO","WARN","ERROR","SEVERE","NONE"]
-        description: Log level used in the logger.
+        description: |
+          [[loglevel]]Log level used in the logger.
       max-index-api:
         type: number
         description: |
-          Max index API.
+          [[max-index-api]]Max index API.
           This setting is provided for technical support only.
       max-parallelism:
         type: integer
         default: 1
         description: |
+          [[max-parallelism-srv]]Maximum number of index partitions, for computing aggregation in parallel.
           Refer to xref:n1ql:n1ql-language-reference/index-partitioning.adoc#max_parallelism[Max Parallelism] for more information.
       memprofile:
         type: string
         default: ""
-        description: Filename to write the diagnostic memory usage log.
+        description: |
+          [[memprofile]]Filename to write the diagnostic memory usage log.
       mutexprofile:
         type: boolean
         default: false
         description: |
-          Mutex profile.
+          [[mutexprofile]]Mutex profile.
           This setting is provided for technical support only.
       n1ql-feat-ctrl:
         type: number
         description: |
-          N1QL feature control.
+          [[n1ql-feat-ctrl]]N1QL feature control.
           This setting is provided for technical support only.
       pipeline-batch:
         type: integer
         default: 16
-        description: Controls the number of items execution operators can batch for Fetch from the KV.
+        description: |
+          [[pipeline-batch-srv]]Controls the number of items execution operators can batch for Fetch from the KV.
       pipeline-cap:
         type: integer
         default: 512
-        description: Maximum number of items each execution operator can buffer between various operators.
+        description: |
+          [[pipeline-cap-srv]]Maximum number of items each execution operator can buffer between various operators.
       prepared-limit:
         type: integer
         default: 16384
-        description: Maximum number of prepared statements in the cache.
+        description: |
+          [[prepared-limit]]Maximum number of prepared statements in the cache.
       pretty:
         type: boolean
         default: false
-        description: Specifies whether query results are returned in pretty format.
+        description: |
+          [[pretty-srv]]Specifies whether query results are returned in pretty format.
       profile:
         type: string
         default: "off"
         enum: ["off","phases","timings"]
         description: |
-          Specifies if there should be a profile section returned with the request results.
+          [[profile-srv]]Specifies if there should be a profile section returned with the request results.
           Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-req[Configuring the Completed Requests] for more information and examples.
       request-size-cap:
         type: integer
         default: 67108864
-        description: Maximum size of a request.
+        description: |
+          [[request-size-cap]]Maximum size of a request.
       scan-cap:
         type: integer
         default: 512
         description: |
-          Maximum buffered channel size between the indexer client and the query service for index scans.
+          [[scan-cap-srv]]Maximum buffered channel size between the indexer client and the query service for index scans.
           This parameter controls when to use scan backfill.
       servicers:
         type: integer
         default: 32
-        description: The number of service threads for the query.
+        description: |
+          [[servicers]]The number of service threads for the query.
       timeout:
         type: string
         default: 0s
-        description: Maximum time to spend on the request before timing out.
+        description: |
+          [[timeout-srv]]Maximum time to spend on the request before timing out.
 
 parameters:
   PathStat:
