--- a/src/docs/swagger/admin.yaml
+++ b/src/docs/swagger/admin.yaml
@@ -880,22 +880,33 @@ definitions:
       auto-prepare:
         type: boolean
         default: false
+        example: true
         description: |
-          [[auto-prepare]]Specifies whether the query engine should create a prepared statement every time a N1QL request is submitted, whether the PREPARE statement is included or not.
+          [[auto-prepare]]
+          Specifies whether the query engine should create a prepared statement every time a N1QL request is submitted, whether the PREPARE statement is included or not.
+          
           Refer to xref:n1ql:n1ql-language-reference/prepare.adoc#auto-prepare[Auto-Prepare] for more information.
       completed:
         type: object
-        title: Completed requests logging parameters
+        title: Logging parameters
+        default: {"aborted": null, "threshold": 1000}
+        example: {"user": "marco", "error": 12003}
         description: |
-          [[completed]]A nested object that sets the parameters for the completed requests catalog.
+          [[completed]]
+          A nested object that sets the parameters for the completed requests catalog.
           All completed requests that match these parameters are tracked in the completed requests catalog.
+
           Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-req[Configuring the Completed Requests] for more information and examples.
         properties:
           aborted:
             type: boolean
+            default: null
+            example: true
             description: If true, all requests that generate a panic are logged.
           client:
             type: string
+            default: ""
+            example: "172.1.2.3"
             description: |
               The IP address of the client.
               If specified, all completed requests from this IP address are logged.
@@ -904,148 +915,317 @@ definitions:
             description: |
               The opaque ID or context provided by the client.
               If specified, all completed requests with this client context ID are logged.
+              
               Refer to xref:settings:query-settings.adoc#client_context_id[client_context_id] for more information.
           error:
-            type: number
+            type: integer
+            format: int32
+            default: null
+            example: 12003
             description: |
               An error number.
               If specified, all completed queries returning this error number are logged.
           tag:
             type: string
+            default: ""
+            example: "both_user_and_error"
             description: A unique string which tags a set of qualifiers.
           threshold:
-            type: number
-            format: ms
+            type: integer
+            format: int32
+            default: 1000
+            example: 7000
             description: |
-              A duration.
+              A duration in milliseconds.
               If specified, all completed queries lasting longer than this threshold are logged.
+              
               This is another way of specifying the `completed-threshold` setting, as described in <<_settings>>.
           user: 
             type: string
+            default: ""
+            example: "marco"
             description: |
               A user name, as given in the request credentials.
               If specified, all completed queries with this user name are logged.
       completed-limit:
         type: integer
+        format: int32
         default: 4000
+        example: 7000
         description: |
-          [[completed-limit]]Sets the number of requests to be logged in the completed requests catalog.
+          [[completed-limit]]
+          Sets the number of requests to be logged in the completed requests catalog.
           As new completed requests are added, old ones are removed.
+
+          Increase this when the completed request keyspace is not big enough to track the slow requests, such as when you want a larger sample of slow requests.
+
           Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-req[Configuring the Completed Requests] for more information and examples.
       completed-threshold:
         type: integer
+        format: int32
         default: 1000
-        format: ms
+        example: 7000
         description: |
-          [[completed-threshold]]All completed queries lasting longer than this threshold are logged in the completed requests catalog.
+          [[completed-threshold]]
+          A duration in milliseconds.
+          All completed queries lasting longer than this threshold are logged in the completed requests catalog.
+
+          Specify `0` to track all requests, independent of duration.
+
+          Specify any negative number to track none.
+
           Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-req[Configuring the Completed Requests] for more information and examples.
       controls:
         type: boolean
         default: false
+        example: true
         description: |
-          [[controls-srv]]Specifies if there should be a controls section returned with the request results.
+          [[controls-srv]]
+          Specifies if there should be a controls section returned with the request results.
+
+          When set to `true`, the query response document includes a controls section with runtime information provided along with the request, such as positional and named parameters or settings.
+
+          [NOTE]
+          If the request qualifies for caching, these values will also be cached in the `completed_requests` system keyspace.
+          
+          //
       cpuprofile:
         type: string
         default: ""
+        example: /tmp/info.txt
         description: |
-          [[cpuprofile]]The absolute path and filename to write the CPU profile to a local file.
+          [[cpuprofile]]
+          The absolute path and filename to write the CPU profile to a local file.
+
+          The output file includes a controls section and performance measurements, such as memory allocation and garbage collection, to pinpoint bottlenecks and ways to improve your code execution.
+
+          To stop `cpuprofile`, run with the empty setting of `""`.
+
+          [NOTE]
+          If `cpuprofile` is left running too long, it can slow the system down as its file size increases.
+
+          //
       debug:
         type: boolean
         default: false
+        example: true
         description: |
-          [[debug]]Use debug mode.
+          [[debug]]
+          Use debug mode.
+
+          When set to `true`, extra logging is provided.
       distribute:
         type: boolean
+        example: true
         description: |
-          [[distribute]]This field is only available with the POST method.
+          [[distribute]]
+          This field is only available with the POST method.
           When specified alongside other settings, this field instructs the node that is processing the request to cascade those settings to all other query nodes.
           The actual value of this field is ignored.
       keep-alive-length:
         type: integer
+        format: int32
         default: 16384
+        example: 7000
         description: |
-          [[keep-alive-length]]Maximum size of buffered result.
+          [[keep-alive-length]]
+          Maximum size of buffered result.
       loglevel:
         type: string
         default: INFO
         enum: ["DEBUG","TRACE","INFO","WARN","ERROR","SEVERE","NONE"]
+        example: DEBUG
         description: |
-          [[loglevel]]Log level used in the logger.
+          [[loglevel]]
+          Log level used in the logger.
+
+          All values, in descending order of data:{blank}
+
+          `DEBUG` -- For developers.
+          Writes everything.
+
+          `TRACE` -- For developers.
+          Less info than `DEBUG`.
+
+          `INFO` -- For admin & customers.
+          Lists warnings & errors.
+
+          `WARN` -- For admin.
+          Only abnormal items.
+
+          `ERROR` -- For admin.
+          Only errors to be fixed.
+
+          `SEVERE` -- For admin.
+          Major items, like crashes.
+
+          `NONE` -- Doesn’t write anything.
       max-index-api:
-        type: number
+        type: integer
+        format: int32
         description: |
-          [[max-index-api]]Max index API.
+          [[max-index-api]]
+          Max index API.
           This setting is provided for technical support only.
       max-parallelism:
         type: integer
+        format: int32
         default: 1
+        example: 0
         description: |
-          [[max-parallelism-srv]]Maximum number of index partitions, for computing aggregation in parallel.
+          [[max-parallelism-srv]]
+          Maximum number of index partitions, for computing aggregation in parallel.
+
+          A zero or negative value means the number of logical CPUs will be used as the parallelism for the query.
+
+          There is also a xref:settings:query-settings.adoc#max_parallelism_req[request-level] `max_parallelism` parameter.
+          If a request includes this parameter, it will be capped by the server-wide `max-parallelism` setting.
+
+          [NOTE]
+          To enable queries to run in parallel, you must specify the Server-level `max-parallelism` parameter on all Query nodes.
+
           Refer to xref:n1ql:n1ql-language-reference/index-partitioning.adoc#max_parallelism[Max Parallelism] for more information.
       memprofile:
         type: string
         default: ""
+        example: /tmp/memory-usage.log
         description: |
-          [[memprofile]]Filename to write the diagnostic memory usage log.
+          [[memprofile]]
+          Filename to write the diagnostic memory usage log.
+
+          To stop `memprofile`, run with the empty setting of `""`.
+
+          [NOTE]
+          If `memprofile` is left running too long, it can slow the system down as its file size increases.
+
+          //
       mutexprofile:
         type: boolean
         default: false
         description: |
-          [[mutexprofile]]Mutex profile.
+          [[mutexprofile]]
+          Mutex profile.
           This setting is provided for technical support only.
       n1ql-feat-ctrl:
-        type: number
+        type: integer
+        format: int32
         description: |
-          [[n1ql-feat-ctrl]]N1QL feature control.
+          [[n1ql-feat-ctrl]]
+          N1QL feature control.
           This setting is provided for technical support only.
       pipeline-batch:
         type: integer
+        format: int32
         default: 16
+        example: 64
         description: |
-          [[pipeline-batch-srv]]Controls the number of items execution operators can batch for Fetch from the KV.
+          [[pipeline-batch-srv]]
+          Controls the number of items execution operators can batch for Fetch from the KV.
       pipeline-cap:
         type: integer
+        format: int32
         default: 512
+        example: 1024
         description: |
-          [[pipeline-cap-srv]]Maximum number of items each execution operator can buffer between various operators.
+          [[pipeline-cap-srv]]
+          Maximum number of items each execution operator can buffer between various operators.
       prepared-limit:
         type: integer
+        format: int32
         default: 16384
+        example: 65536
         description: |
-          [[prepared-limit]]Maximum number of prepared statements in the cache.
+          [[prepared-limit]]
+          Maximum number of prepared statements in the cache.
+
+          When this cache reaches the limit, the least recently used prepared statements will be discarded as new prepared statements are created.
       pretty:
         type: boolean
         default: false
+        example: true
         description: |
-          [[pretty-srv]]Specifies whether query results are returned in pretty format.
+          [[pretty-srv]]
+          Specifies whether query results are returned in pretty format.
+
+          There is also a xref:settings:query-settings.adoc#pretty_req[request-level] `pretty` parameter.
+          If a request does not include this parameter, the server-level `pretty` setting will be used, which defaults to `false`.
       profile:
         type: string
         default: "off"
+        example: "phases"
         enum: ["off","phases","timings"]
         description: |
-          [[profile-srv]]Specifies if there should be a profile section returned with the request results.
+          [[profile-srv]]
+          Specifies if there should be a profile section returned with the request results.
+          The valid values are:{blank}
+
+          `off` -- No profiling information is added to the query response.
+
+          `phases` -- The query response includes a profile section with stats and details about various phases of the query plan and execution.
+          Three phase times will be included in the `system:active_requests` and `system:completed_requests` monitoring keyspaces.
+
+          `timings` -- Besides the phase times, the profile section of the query response document will include a full query plan with timing and information about the number of processed documents at each phase.
+          This information will be included in the `system:active_requests` and `system:completed_requests` keyspaces.
+
+          [NOTE]
+          If `profile` is not set as one of the above values, then the profile setting does not change.
+          
           Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-req[Configuring the Completed Requests] for more information and examples.
       request-size-cap:
         type: integer
         default: 67108864
+        example: 70000
         description: |
-          [[request-size-cap]]Maximum size of a request.
+          [[request-size-cap]]
+          Maximum size of a request.
       scan-cap:
         type: integer
+        format: int32
         default: 512
+        example: 1024
         description: |
-          [[scan-cap-srv]]Maximum buffered channel size between the indexer client and the query service for index scans.
+          [[scan-cap-srv]]
+          Maximum buffered channel size between the indexer client and the query service for index scans.
           This parameter controls when to use scan backfill.
+
+          Use `0` or a negative number to disable.
+
+          Smaller values reduce GC while larger values reduce indexer backfill.
+
+          The index channel capacity is configurable per request.
       servicers:
         type: integer
+        format: int32
         default: 32
+        example: 8
         description: |
-          [[servicers]]The number of service threads for the query.
+          [[servicers]]
+          The number of service threads for the query.
       timeout:
         type: string
+        format: duration
         default: 0s
+        example: 30m
         description: |
-          [[timeout-srv]]Maximum time to spend on the request before timing out.
+          [[timeout-srv]]
+          Maximum time to spend on the request before timing out.
+
+          The default value means no timeout is applied and the request runs for however long it takes.
+
+          There is also a xref:settings:query-settings.adoc#timeout_req[request-level] `timeout` parameter.
+          The minimum of that and the service-level `timeout` setting is applied.
+
+          Its format includes an amount and a mandatory unit, e.g. `10ms` (10 milliseconds) or `0.5s` (half a second)..
+          Valid units are:{blank}
+
+          `ns` (nanoseconds) +
+          `us` (microseconds) +
+          `ms` (milliseconds) +
+          `s` (seconds) +
+          `m` (minutes) +
+          `h` (hours) +
+
+          Specify `0` or a negative integer to disable.
 
 parameters:
   PathStat:
