--- a/src/docs/swagger/admin.yaml
+++ b/src/docs/swagger/admin.yaml
@@ -1262,7 +1262,7 @@ definitions:
           There is also a xref:settings:query-settings.adoc#timeout_req[request-level] `timeout` parameter.
           The minimum of that and the service-level `timeout` setting is applied.
 
-          Its format includes an amount and a mandatory unit, e.g. `10ms` (10 milliseconds) or `0.5s` (half a second)..
+          Its format includes an amount and a mandatory unit, e.g. `10ms` (10 milliseconds) or `0.5s` (half a second).
           Valid units are:{blank}
 
           `ns` (nanoseconds) +
